I add premises 9. I improve readme. I make sure the conversion is done in order.
House 9 is added, which was previously missing because the download link was wrong.
It is modified so that the conversion is done in order, that is, house 1 first and house 10 last.

--- a/metadata/dataset.yaml
+++ b/metadata/dataset.yaml
@@ -6,12 +6,13 @@ creators:
 - Essayeh, Chaimaa
 - Ghogho, Mounir
 - Kobbane, Abdellatif 
+# Mariño, Camilo (convert creator)
 publication_date: 2020
 institution: International University of Rabat (UIR) and ENSIAS, Mohammed V University in Rabat
 contact: mounir.ghogho@uir.ac.ma   
 description: Several weeks of power data from different Moroccan households.
 subject: Disaggregated power demand from domestic buildings.
-number_of_buildings: 6
+number_of_buildings: 10
 timezone: GMT+01:00
 geo_location:
   locality: Rabat, Sala Al-Jadida, and Tetuàn    # City
@@ -19,6 +20,7 @@ geo_location:
   latitude: 33.994013 # Sala Al Jadida's coorindates
   longitude: -6.736019
 related_documents:
+- https://github.com/camilomarino/MORED-NILMTK-Converter
 - https://moredataset.github.io/MORED/
 - >
   Ahajjam, M.A.; Bonilla Licea, D.; Essayeh, C.; Ghogho, M.; Kobbane, A. MORED: A Moroccan Buildings’ Electricity Consumption Dataset. Energies 2020, 13, 6737.
